# shell

./: .gitignore  CMakeLists.txt  README.md  start.sh
src/: main.cpp
src/builtins/: builtins.cpp  builtins.h
src/core/: command_handler.cpp  command_handler.h
src/parser/: argument_parser.cpp  argument_parser.h
src/utils/: path_utils.cpp  path_utils.h
